# spartacus

./: CMakeLists.txt
_old/adm/cmakes/: SetupFREETYPE.cmake  SetupGLIB.cmake  SetupGRAPHITE.cmake  SetupHARFBUZZ.cmake  SetupICU.cmake  SetupMD4C.cmake  SetupRUNTIME.cmake  SetupZSTD.cmake
_old/applications/Launcher/: Launcher.rc  Launcher_Main.cxx
_old/cmakes/: SpartacusMacros.cmake
_old/modules/: CMakeLists.txt
_old/modules/Huygens/: CMakeLists.txt  Huygens_Module.cxx  Huygens_Version.hxx.in
_old/modules/Spartacus/: CMakeLists.txt  Spartacus_AboutDialog.hxx  Spartacus_Cluster.cxx  Spartacus_Cluster.hxx  Spartacus_Desktop.cxx  Spartacus_Export.hxx  Spartacus_LocalCluster.cxx  Spartacus_LocalCluster.hxx  Spartacus_Module.cxx  Spartacus_Module.hxx  Spartacus_RemoteCluster.cxx  Spartacus_RemoteCluster.hxx  Spartacus_Utilities.cxx  Spartacus_Utilities.hxx
_old/modules/Spartacus/_old/: Spartacus_Cluster.cxx  Spartacus_Cluster.hxx  Spartacus_ClusterType.hxx
_old/modules/Spartacus/tests/: Spartacus_TestCluster.cxx
_old/res/: CMakeLists.txt
_old/res/Spartacus/: CMakeLists.txt
_old/src/Mercury/: CMakeLists.txt  Mercury_Cluster.hxx  Mercury_DatabaseDriver.hxx  Mercury_Shape.cxx  Mercury_Shape.hxx  Mercury_ShapeDatabase.cxx  Mercury_ShapeDatabase.hxx  Mercury_TableModel.hxx  Mercury_TableView.cxx  Mercury_TableView.hxx
_old/src/Saturn/: CMakeLists.txt  Saturn_Export.hxx  Saturn_MeshViewer.cxx
_old/src/Spartacus/: Spartacus.rc  Spartacus_AboutDialog.ui  Spartacus_Desktop.hxx  Spartacus_Export.hxx  Spartacus_ICluster.cxx  Spartacus_ILocalCluster.cxx  Spartacus_ILocalCluster.hxx  Spartacus_LoginDialog.cxx  Spartacus_LoginDialog.hxx  Spartacus_LogoutDialog.cxx  Spartacus_MapOfSession.hxx  Spartacus_Module.cxx  Spartacus_Module.hxx  Spartacus_Paths.cxx  Spartacus_PreferencesDialog.cxx  Spartacus_Session.cxx  Spartacus_Session.hxx  Spartacus_SessionType.hxx  Spartacus_SplashScreen.cxx  Spartacus_VectorOfSqlError.hxx  Spartacus_Version.hxx.in
_old/tests/Mercury/: CMakeLists.txt  Mercury_TestCluster.cxx
adm/: CMakeLists.txt
adm/cmakes/: CMakeLists.txt  SetupDOUBLECONVERSION.cmake  SetupICU.cmake  SetupINTL.cmake  SetupOPENCASCADE.cmake  SetupPCRE.cmake  SetupPNG.cmake  SetupQT.cmake  SetupTRILINOS.cmake  SetupZLIB.cmake  SpartacusMacros.cmake
applications/: CMakeLists.txt
applications/Launcher/: CMakeLists.txt  Launcher_Version.hxx.in
cmakes/: SetupBROTLI.cmake  SetupBZ2.cmake  SetupICONV.cmake  SetupQT.cmake
libraries/: CMakeLists.txt
libraries/Mercury/: CMakeLists.txt  Mercury_Cluster.cxx  Mercury_Cluster.hxx  Mercury_ClusterDriver.cxx  Mercury_ClusterDriver.hxx  Mercury_ClusterType.hxx  Mercury_Engine.cxx  Mercury_Engine.hxx  Mercury_LocalCluster.cxx  Mercury_LocalCluster.hxx  Mercury_TableEditorWidget.ui  Mercury_Utilities.cxx  Mercury_Utilities.hxx  Mercury_Version.hxx.in
libraries/Mercury/cluster/: Mercury_Admin.db
libraries/Mercury/tests/: Mercury_TestEngine.cxx  Mercury_TestLocalCluster.cxx
modules/Huygens/: Huygens_Export.hxx  Huygens_Module.hxx
modules/Spartacus/: CMakeLists.txt  Spartacus_AboutDialog.cxx  Spartacus_Desktop.hxx  Spartacus_Session.cxx  Spartacus_Session.hxx  Spartacus_SessionType.hxx
modules/Spartacus/icons/: icons.qrc
res/Spartacus/: CMakeLists.txt
res/Spartacus/icons/: Resources.qrc
res/Spartacus/images/: Resources.qrc
resources/: CMakeLists.txt
src/: CMakeLists.txt
src/Mercury/: CMakeLists.txt  Mercury_Cluster.cxx  Mercury_Cluster.hxx  Mercury_ClusterDriver.cxx  Mercury_ClusterDriver.hxx  Mercury_Database.cxx  Mercury_Database.hxx  Mercury_DatabaseDriver.cxx  Mercury_DriverType.hxx  Mercury_Engine.cxx  Mercury_Engine.hxx  Mercury_Export.hxx  Mercury_LocalCluster.cxx  Mercury_LocalCluster.hxx  Mercury_Shape.hxx  Mercury_TableModel.cxx  Mercury_Test.cxx  Mercury_Version.hxx.in
src/Mercury/_old/: Mercury_AdminDatabaseModel.cxx  Mercury_AdminDatabaseModel.hxx  Mercury_Cluster.cxx  Mercury_Cluster.hxx  Mercury_ClusterType.hxx  Mercury_DatabaseModel.cxx  Mercury_DatabaseModel.hxx  Mercury_DriverType.hxx  Mercury_Error.hxx  Mercury_LShapeTableModel.cxx  Mercury_LShapeTableModel.hxx  Mercury_OpenError.hxx  Mercury_RemoteClusterDriver.cxx  Mercury_RemoteClusterDriver.hxx  Mercury_ShapeDatabaseModel.cxx  Mercury_ShapeDatabaseModel.hxx  Mercury_TableModel.cxx  Mercury_TableModel.hxx  Mercury_UsersTableModel.cxx  Mercury_UsersTableModel.hxx  Mercury_Utilities.cxx  Mercury_Utilities.hxx
src/Saturn/: Saturn_MeshViewer.hxx  Saturn_Version.hxx.in
src/Spartacus/: CMakeLists.txt  Spartacus_AboutDialog.cxx  Spartacus_Desktop.cxx  Spartacus_Engine.cxx  Spartacus_Engine.hxx  Spartacus_ICluster.hxx  Spartacus_LoginDialog.ui  Spartacus_LogoutDialog.hxx  Spartacus_LogoutDialog.ui  Spartacus_Main.cxx  Spartacus_Paths.hxx  Spartacus_PreferencesDialog.hxx  Spartacus_PreferencesDialog.ui  Spartacus_ResourcesMgr.cxx  Spartacus_ResourcesMgr.hxx  Spartacus_SettingsMgr.cxx  Spartacus_SettingsMgr.hxx  Spartacus_SplashScreen.hxx
tests/: CMakeLists.txt
tests/Mercury/: CMakeLists.txt  Mercury_TestCluster.cxx
